# mem-mesh

./: .cursorrules  .dockerignore  .env  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  API_DESIGN_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  PLAN.md  QWEN.md  README.en.md  README.ko.md  README.md  SETUP.md  after_upgrade_results.json  before_upgrade_results.json  benchmark_results.json  build_webui.py  compare_after.py  consolidate_projects.py  demo_interactive_search.py  demo_query_argument.py  docker-compose.benchmark.yml  docker-compose.dev.yml  docker-compose.yml  install-hooks.py  mcp_client_script.py  mem-mesh-web-ui-project-summary.md  pyproject.toml  regenerate_embeddings.py  requirements.txt  (+31 more)
.beads/: issues.jsonl
.claude/: settings.local.json
.claude/hooks/: mem-mesh-stop.sh  mem-mesh-track.sh
.cursor/: hooks.json  hooks.mem-mesh.example.json
.cursor/hooks/: mem-mesh-auto-save.sh  mem-mesh-before-submit-prompt.sh  mem-mesh-precompact.sh  mem-mesh-session-end.sh  mem-mesh-session-start.sh  mem-mesh-subagent-start.sh  mem-mesh-subagent-stop.sh
.gemini/: settings.json
.github/workflows/: ci.yml  docker.yml  release.yml
.kiro/hooks/: README.md  auto-create-pin-on-task.kiro.hook  auto-save-code-changes.kiro.hook  auto-save-conversations.json  auto-save-conversations.kiro.hook  auto-save-decisions.kiro.hook  auto-save-errors.kiro.hook  auto-save-ideas.kiro.hook  auto-save-performance.kiro.hook  auto-save-qa-pairs.kiro.hook  auto-save-task-completion.kiro.hook  auto-save-tests.kiro.hook  load-project-context.kiro.hook  manual-save-button.json  manual-save-memmesh.kiro.hook  manual-search-memories.kiro.hook  manual-session-summary.kiro.hook  save-agent-responses.json  session-summary-hook.kiro.hook  session-summary.json  show-project-stats.kiro.hook  test-workspace-variables.kiro.hook
.omc/: project-memory.json
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
.qwen____/: settings.json
.sisyphus/: boulder.json
.sisyphus/plans/: mem-mesh-refactoring.md
app/: __init__.py
app/cli/: config_cmd.py  install_hooks.py  main.py  mcp_config.py  onboarding.py  system_status.py  updater.py
app/core/: AGENTS.md  __init__.py  config.py  errors.py  notifier.py  version.py
app/dashboard/: __init__.py  __main__.py  main.py
app/mcp/: __init__.py  __main__.py  pure_server.py  server.py
app/mcp_common/: AGENTS.md  __init__.py  batch_tools.py  descriptions.py  dispatcher.py  prompt_optimizer.py  schemas.py  storage.py  token_estimator.py  tools.py  transport.py
app/mcp_integration/: auto_context.py
app/mcp_stdio/: AGENTS.md  __init__.py  __main__.py  pure_server.py  server.py
app/mcp_stdio_pure/: AGENTS.md  __init__.py  __main__.py  server.py
app/pure_mcp/: __init__.py  __main__.py  server.py
app/web/: AGENTS.md  _____main_old.py  __init__.py  app.py  (+5 more)
docker/: Dockerfile.dashboard  Dockerfile.mcp  README.md  docker-compose.yml
docs/: CODE_REVIEW_2026-02-26.md  CODE_REVIEW_FIX_PLAN.md  IDE_INTEGRATION.md  KOREAN_SEARCH_SOLUTION.md  agents-mcp-integration.md  benchmark-setup.md  context-optimization-prompt-compact.md  context-optimization-prompt.md  cursor-rules-mcp-prompt.md  efficient-mcp-prompts.md  embedding-model-benchmark.md  embedding_model_testing_guide.md  ide-global-context-rule.md  ide-system-prompt.md  kiro-hooks-reference.md  mcp-usage-examples.md  mcp_config_optimized.json  rfc-search-mode-simplification.md  rules-prompt-full.md  rules-prompt-simple.md  search-improvements-implementation.md  search-quality-improvements.md  session_summary.md  strategy-report.md  unified-search-migration-guide.md  vector-db-comparison.md  websocket-realtime-updates.md
examples/: README.md
mcp_prompts/: auto_project_prompt.md  optimized_search.md
scripts/: AGENTS.md  README.md  README_debug_mcp_sse.md  ab_test_embeddings.py  analyze_conversations.py  analyze_embedding_differences.py  benchmark_embedding_models.py  benchmark_vector_dbs.py  cleanup_noise_data.py  compare_before_after.py  debug_mcp_sse_search.py  debug_summarization.py  evaluate_search_quality.py  final_comparison.py  final_comparison_fixed.py  generate_rules_bundle.py  import_kiro_chat-v2.py  import_kiro_chat.py  import_kiro_chat_memmesh.py  init-postgres.sql  interactive_search.py  migrate_context_token_optimization.py  migrate_embeddings.py  migrate_memory_relations.py  migrate_monitoring_tables.py  migrate_to_postgres.py  migrate_to_qdrant.py  regenerate_embeddings.py  run_mcp_server.py  save_optimization_to_memory.py  save_qa_pair.py  save_session_to_memesh.py  save_thread_summary_korean.py  save_work_tracking_test_to_memory.py  save_work_tracking_via_mcp.py  search_qa_pairs.py  setup_fts.py  simple_summarization_test.py  switch_embedding_model.py  sync_memories.py  (+8 more)
src/: __main__.py  config.py  main.py
src__DEPRECATED/: __init__.py  main.py
static/: AGENTS.md  index.html  test-api.js  test-search.html
templates/: index.html
tests/: AGENTS.md  conftest.py  test-projects.html  test-runner.html  test_ab_test.py  test_alert_service.py  test_api_mode.py  test_auto_complete_strategy.py  test_benchmark_results.json  test_conflict_detector.py  test_content_quality_gate.py  test_context_optimizer.py  test_context_service.py  test_database_schema_optimization.py  test_debug_filtering.py  test_dimension_mismatch.py  test_embedding_analysis.py  test_embedding_benchmark.py  test_empty_query_filtering.py  test_error_centralization.py  test_fastapi_app.py  test_hook_ab_comparison.py  test_hook_scripts.py  test_hook_session_end.py  test_hook_snapshots.py  test_importance_analyzer.py  test_install_hooks_idempotency.py  test_integration.py  test_integration_quality_conflict.py  test_interactive_search.py  test_mcp.py  test_mcp_dispatcher.py  test_mcp_stdio.py  test_mcp_stdio_pure.py  test_mcp_tools.py  test_mcp_tools_context_token_optimization.py  test_memory_service.py  test_metrics_collector.py  test_metrics_direct.py  test_metrics_integration.py  (+35 more)
(+395 files in other folders)
