[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem-mesh"
version = "1.1.9"
description = "Centralized memory system for AI development tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "mem-mesh", email = "dev@mem-mesh.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # CLI-only deps (lightweight)
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sentence-transformers>=2.2.2",
    "sqlite-vec>=0.0.1a12",
    "mcp>=1.0.0",
    "sqlmodel>=0.0.14",
    "python-multipart>=0.0.6",
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "pysqlite3>=0.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.88.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
    "coverage>=7.3.0",
    "pre-commit>=3.5.0",
    "tiktoken>=0.5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.scripts]
mem-mesh = "app.cli.main:main"
# Legacy entry points (backward compat)
mem-mesh-mcp = "src.__main__:main"
# App architecture entry points
mem-mesh-mcp-stdio = "app.mcp_stdio.__main__:main"
mem-mesh-mcp-pure = "app.mcp_stdio_pure.__main__:main"
mem-mesh-web = "app.web.__main__:main"
mem-mesh-hooks = "app.cli.install_hooks:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src", "app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true

[[tool.mypy.overrides]]
module = ["mcp.*", "fastmcp.*"]
follow_imports = "skip"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "property: Property-based tests",
    "eval: DX evaluation tests (Tier 3 requires RUN_EVALS=1)",
]

[tool.coverage.run]
source = ["src", "app"]
omit = ["tests/*", "src/__main__.py", "app/mcp_stdio/__main__.py", "app/mcp_stdio_pure/__main__.py", "app/web/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]